--- a/index.html
+++ b/index.html
@@ -5,9 +5,25 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <title>Portifólio 2</title>
+  <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
+  <link rel="manifest" href="/site.webmanifest">
+  <title>Portfólio 2</title>
 </head>
 <body>
+  <div class="container">
+    <header>
+      <div class="img-wrapper">
+        <img src="/img/bg.jpg" alt="bg">
+        <div class="banner">
+          <h1>Full Stack Web Developer</h1>
+          <p>Jorge Alves</p>
+          <button>Saiba mais</button>
+      </div>
+      </div>
+    </header>
+  </div>
   
 </body>
 </html>
