--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       </div>
       </div>
     </header>
-    <div class="sidebar">
+    <aside class="sidebar">
       <nav>
         <ul class="menu">
           <li class="menu-item"><a href="#" class="menu-link">Home</a></li>
@@ -40,8 +40,74 @@
         </ul>
       </nav>
       <div class="social-media"><a href="#"><i class="fab fa-facebook"></i></a><a href="#"><i class="fab fa-github"></i></a><a href="#"><i class="fab fa-twitter"></i></a></div>
-    </div>
+    </aside>
   </div>
+
+  <section class="sessao-conhecimentos">
+    
+    <div class="sessao-header">
+      <h1>Conhecimentos</h1>
+    </div>
+    <div class="conhecimentos">
+      <div class="conhecimento">
+        <div class="conhecimento-header">
+          <i class="fab fa-html5"></i>
+          <h3>HTML</h3>
+        </div>
+        <div class="conhecimento-text">
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui nemo iste voluptatibus officiis. Sint recusandae laborum voluptates, quidem numquam iste hic sunt ea ex excepturi, similique suscipit harum tenetur quibusdam?</p>
+        </div>
+      </div>
+      <div class="conhecimento">
+        <div class="conhecimento-header">
+          <i class="fab fa-css3-alt"></i>
+          <h3>CSS</h3>
+        </div>
+        <div class="conhecimento-text">
+          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Est voluptatem quas magni ea aperiam soluta ad repudiandae quo ut obcaecati. Dicta libero similique laboriosam assumenda, itaque quae aspernatur reprehenderit animi!</p>
+        </div>
+      </div>
+      <div class="conhecimento">
+        <div class="conhecimento-header">
+          <i class="fas fa-pencil-alt"></i>
+          <h3>Designer</h3>
+        </div>
+        <div class="conhecimento-text">
+          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Assumenda nisi molestiae nesciunt tenetur accusamus maxime saepe repellat ipsam necessitatibus impedit praesentium quod, eius blanditiis. Ab repellendus voluptates dicta corrupti numquam.</p>
+        </div>
+      </div>
+      <div class="conhecimento">
+        <div class="conhecimento-header">
+          <i class="fab fa-js"></i>
+          <h3>Javascript</h3>
+        </div>
+        <div class="conhecimento-text">
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta enim maiores aliquid minima nulla facere corrupti? Labore facere ipsum voluptatum illum eligendi quo nisi, magni, dolorem dolores laboriosam enim? Eligendi.</p>
+        </div>
+      </div>
+      <div class="conhecimento">
+        <div class="conhecimento-header">
+          <i class="fab fa-bootstrap"></i>
+          <h3>Bootstrap</h3>
+        </div>
+        <div class="conhecimento-text">
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque, ipsa nesciunt? Assumenda, perferendis at magnam corrupti unde totam doloribus praesentium veniam nulla quis fuga quibusdam, magni rerum facere, vitae amet?</p>
+        </div>
+      </div>
+      <div class="conhecimento">
+        <div class="conhecimento-header">
+          <i class="fab fa-github"></i>
+          <h3>Git e GitHub</h3>
+        </div>
+        <div class="conhecimento-text">
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci nisi excepturi delectus autem culpa numquam tempora itaque commodi enim quibusdam? Corporis velit qui commodi adipisci, nulla provident labore a ipsum!</p>
+        </div>
+      </div>
+      <div class="conhecimentos-img-wrapper">
+        <img src="/img/conhecimento.jpg" alt="imagem conhecimento">
+      </div>
+    </div>
+  </section>
   
 </body>
 <script src="/js/script.js"></script>
